--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "watch": "npm-run-all -s clean -p watch:dev parcel:serve"
     },
     "dependencies": {
+        "autoprefixer": "^9.7.6",
         "npm-run-all": "^4.1.5",
         "parcel-bundler": "^1.12.4",
         "postcss-cli": "^7.1.0",
